Some cleanup and a map exporter